# roq-cpp-json-publisher-template

./: CHANGELOG.md  CMakeLists.txt  README.md
benchmark/: .gitignore
conda/: meta.yaml
share/flags/prod/: flags.cfg
src/roq/bridge/json/: .gitignore  CMakeLists.txt  application.cpp  application.hpp  bridge.cpp  bridge.hpp  config.cpp  config.hpp  controller.cpp  controller.hpp  main.cpp  session.cpp  session.hpp  settings.cpp  settings.hpp  shared.cpp  shared.hpp  test.sh
src/roq/bridge/json/flags/: .gitignore  CMakeLists.txt  flags.json
src/roq/samples/bridge/json/: .gitignore  CMakeLists.txt  application.cpp  application.hpp  config.cpp  config.hpp  controller.cpp  controller.hpp  main.cpp  session.cpp  session.hpp  settings.cpp  settings.hpp  shared.cpp  shared.hpp  test.sh
src/roq/samples/bridge/json/flags/: .gitignore  CMakeLists.txt  flags.json
src/roq/samples/publisher/json/: .gitignore  README.md  application.cpp  application.hpp  config.cpp  config.hpp  controller.cpp  controller.hpp  main.cpp  session.cpp  session.hpp  settings.cpp  settings.hpp  shared.cpp  shared.hpp  test.sh
src/roq/samples/publisher/json/flags/: .gitignore  CMakeLists.txt  flags.json
test/: .gitignore  CMakeLists.txt
